# Tadabbur

./: .env.example  .gitignore  Makefile  README.md  docker-compose.portable.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  4fdb53c55f30_add_is_enabled_to_tafseer_sources.py  8c162ed15d9b_add_story_atlas_tables.py  a1b2c3d4e5f6_add_concept_graph_tables.py  b7c8d9e0f1a2_add_verification_workflow_tables.py  c2d3e4f5g6h7_add_verification_queue.py  ce5e28ac4034_add_story_graph_enhanced_fields.py  d3e4f5g6h7i8_add_rhetorical_discourse_tables.py  e4f5g6h7i8j9_add_quranic_themes_tables.py  f5g6h7i8j9k0_add_theme_segment_discovery_fields.py  f796d0030737_add_provenance_and_audit_log.py  (+2 more)
backend/app/: main.py
backend/docs/: THEMES_RUNBOOK.md  kg_migration_plan.md
backend/monitoring/: alerting_rules.yml  alertmanager.yml  docker-compose.monitoring.yml  grafana-dashboard.json  prometheus.yml
backend/reports/: audit.json  audit.md  suggestions.json  tawheed_suggestions.json
backend/scripts/: populate_all_topics.py  populate_occurrence_topics.py  populate_remaining_topics.py  populate_theme_topics.py  seed_concepts.py
backend/serving/: Dockerfile  README.md  config.properties  cross_encoder_handler.py  docker-compose.serving.yml  nginx.conf  package_model.py  torchserve_client.py
backend/tests/: conftest.py  test_advanced_atlas.py  test_alatlas_enhanced.py  test_alatlas_service.py  test_api_contracts.py  test_miracles.py
frontend/: .env  (+7 more)
(+318 files in other folders)
